some unit tests still to fix